--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -52,22 +54,152 @@
         <div class="universities__slider">
             <div class="slider-item">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
-
-                <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
-                <div class="line line--slide-item">
-                    <span class="line-circle line-circle--slide-item"></span>
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
-                <p class="slider-item__info">
-                    gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
-                    fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
-                </p>
-
-                <a href="@" class="btn slider-item__btn">More Details</a>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
             </div>
         </div>
-
+        <div class="slider-line">
+            <ul>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+                <li class="slider-line-point"></li>
+            </ul>
+        </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/headerSticky.js"></script>
+    <script src="./js/university-slider.js"></script>
+
 </body>
 
 </html>
