add admition section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-
+    <script src="https://kit.fontawesome.com/3128641a4f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -179,19 +179,107 @@
                 </div>
             </div>
         </div>
-        <div class="slider-line">
-            <ul>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-                <li class="slider-line-point"></li>
-            </ul>
+        <div class="container">
+
+
+            <div class="slider-nav">
+                <div class="slider-line">
+                    <ul class="slider-line__list">
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                    </ul>
+                </div>
+                <div class="btn-wrap">
+                    <button class="btn slider-nav-btn slider-nav-btn--prev js-university-slider__prev-btn"><i
+                            class="fas fa-arrow-left"></i></button>
+                    <button class="btn slider-nav-btn slider-nav-btn--next js-university-slider__next-btn"><i
+                            class="fas fa-arrow-right"></i></button>
+                </div>
+
+            </div>
+
+            <div class="universities-navigations">
+                <button class="btn btn--university">TOP UNIVERSITiES</button>
+                <button class="btn btn--university btn--posive">RUSSIA </button>
+                <button class="btn btn--university btn--posive">UKRAINE</button>
+                <button class="btn btn--university btn--posive">LEARN MORE</button>
+            </div>
+        </div>
+
+
+    </section>
+    <section class="admission">
+        <div class="container">
+            <div class="admission-block-wrap">
+                <div class="admission-item-wrap">
+
+
+                    <div class="title-block">
+                        <h3 class="title-block__header">
+                            ADMISSION PROCESS
+                        </h3>
+                        <div class="line">
+                            <span class="line-circle"></span>
+                        </div>
+                    </div>
+                    <div class="admission-item">
+                        <div class="step-block">
+                            <img src="./img/icons/step-1.svg" alt="step-1" class="step-block__icon">
+                            <h4 class="step-block__header">STEP: 1</h4>
+                            <h5 class="step-block__subtitle">Genera Medicine</h5>
+                            <span class="step-block__line"></span>
+                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
+                                out
+                                an online form to apply</p>
+                        </div>
+                        <div class="step-block">
+                            <img src="./img/icons/step-2.svg" alt="step-1" class="step-block__icon">
+                            <h4 class="step-block__header">STEP: 1</h4>
+                            <h5 class="step-block__subtitle">Genera Medicine</h5>
+                            <span class="step-block__line"></span>
+                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
+                                out
+                                an online form to apply</p>
+                        </div>
+                        <div class=" step-block">
+                            <img src="./img/icons/step-3.svg" alt="step-1" class="step-block__icon">
+                            <h4 class="step-block__header">STEP: 1</h4>
+                            <h5 class="step-block__subtitle">Genera Medicine</h5>
+                            <span class="step-block__line"></span>
+                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
+                                out
+                                an online form to apply</p>
+                        </div>
+                        <div class=" step-block">
+                            <img src="./img/icons/step-4.svg" alt="step-1" class="step-block__icon">
+                            <h4 class="step-block__header">STEP: 1</h4>
+                            <h5 class="step-block__subtitle">Genera Medicine</h5>
+                            <span class="step-block__line"></span>
+                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
+                                out
+                                an online form to apply</p>
+                        </div>
+                    </div>
+                </div>
+                <form action="#" class="admission-form">
+                    <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                    <p class="admission-form__subtitle">Fill out an online form to apply for a Russian </p>
+                    <input type="text" placeholder="Name" class="admission-form__input">
+                    <input type="email" placeholder="Email" class="admission-form__input">
+                    <input type="tel" placeholder="Phone" class="admission-form__input">
+                    <input type="text" placeholder="Country" class="admission-form__input">
+                    <input type="submit" class="btn" placeholder="send">
+                </form>
+            </div>
+
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
