add courses slider

--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
         </div>
         <div class="container">
 
-
             <div class="slider-nav">
                 <div class="slider-line">
                     <ul class="slider-line__list">
@@ -282,11 +281,161 @@
 
         </div>
     </section>
+    <section class="courses">
+        <!-- <div class="container"> -->
+        <div class="title-block">
+            <img src="./img/icons/logo.svg" alt="logo" width="280" height="70" class="title-block__img">
+            <div class="line">
+                <span class="line-circle"></span>
+            </div>
+            <h3 class="title-block__header">
+                COURSES AVAILABLE
+            </h3>
+            <p class="title-block__info">
+                gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
+        </div>
+        <div class="courses__slider">
+
+
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+
+            <div class="slider-nav">
+                <div class="slider-line">
+                    <ul class="slider-line__list">
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                    </ul>
+                </div>
+                <div class="btn-wrap">
+                    <button class="btn slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn"><i
+                            class="fas fa-arrow-left"></i></button>
+                    <button class="btn slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn"><i
+                            class="fas fa-arrow-right"></i></button>
+                </div>
+
+            </div>
+
+            <div class="universities-navigations">
+                <button class="btn btn--university btn--posive">LEARN MORE</button>
+            </div>
+        </div>
+        <!-- </div> -->
+    </section>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/headerSticky.js"></script>
     <script src="./js/university-slider.js"></script>
+    <script src="./js/courses-slider.js"></script>
 
 </body>
 
