--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://kit.fontawesome.com/3128641a4f.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,500;1,700&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&family=Roboto:ital,wght@0,500;0,700;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -51,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="universities__slider">
+        <div class="slider-wrap universities__slider">
             <div class="slider-item">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
@@ -282,7 +287,6 @@
         </div>
     </section>
     <section class="courses">
-        <!-- <div class="container"> -->
         <div class="title-block">
             <img src="./img/icons/logo.svg" alt="logo" width="280" height="70" class="title-block__img">
             <div class="line">
@@ -294,7 +298,7 @@
             <p class="title-block__info">
                 gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
         </div>
-        <div class="courses__slider">
+        <div class="slider-wrap courses__slider">
 
 
             <div class="slider-item">
@@ -426,16 +430,130 @@
                 <button class="btn btn--university btn--posive">LEARN MORE</button>
             </div>
         </div>
-        <!-- </div> -->
     </section>
+    <section class="academic-header">
+        <div class="container">
+            <div class="academic-header__content">
 
+
+                <img class="academic-header__icon" src="./img/icons/graduation-icon.svg" alt="graduation">
+                <h1 class="academic-header__title">admissionS</h1>
+                <div class="academic">
+                    <!-- change academic-years there -->
+                    <span class="academic__years">2020-2021</span>
+                    <h5 class="academic__title">
+                        are open!
+                    </h5>
+                    <!---->
+                </div>
+                <div class="banner">
+                    apply
+                    now
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="benefits">
+        <div class="container">
+            <div class="title-block">
+                <img src="./img/icons/logo.svg" alt="logo" width="280" height="70" class="title-block__img">
+                <div class="line">
+                    <span class="line-circle"></span>
+                </div>
+                <h3 class="title-block__header">
+                    COURSES AVAILABLE
+                </h3>
+                <p class="title-block__info">
+                    gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
+            </div>
+            <div class="benefits-items">
+                <div class="benefits-item">
+                    <img src="./img/icons/benefits-icon-1.svg" alt="icon" class="benefits-item__icon">
+                    <h5 class="benefits-item__info">
+                        ENGLISH MEDIUM OF
+                        INSTRUCTION
+                    </h5>
+                </div>
+                <div class="benefits-item">
+                    <img src="./img/icons/benefits-icon-2.svg" alt="icon" class="benefits-item__icon">
+                    <h5 class="benefits-item__info">
+                        EASY ADMISSION
+                        PROCESS
+                    </h5>
+                </div>
+                <div class="benefits-item">
+                    <img src="./img/icons/benefits-icon-3.svg" alt="icon" class="benefits-item__icon">
+                    <h5 class="benefits-item__info">
+                        AFFORDABLE
+                        FEES
+                    </h5>
+                </div>
+                <div class="benefits-item">
+                    <img src="./img/icons/benefits-icon-4.svg" alt="icon" class="benefits-item__icon">
+                    <h5 class="benefits-item__info">
+                        EUROPEAN LEVEL OF
+                        EDUCATION
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="gallery">
+        <div class="title-block">
+            <h3 class="title-block__header">
+                COURSES AVAILABLE
+            </h3>
+            <div class="line">
+                <span class="line-circle"></span>
+            </div>
+        </div>
+        <div class="slider-wrap gallery__slider">
+            <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item">
+        </div>
+        <div class="container">
+
+            <div class="slider-nav">
+                <div class="slider-line">
+                    <ul class="slider-line__list">
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li>
+                    </ul>
+                </div>
+                <div class="btn-wrap">
+                    <button class="btn slider-nav-btn slider-nav-btn--prev js-gallery-slider__prev-btn"><i
+                            class="fas fa-arrow-left"></i></button>
+                    <button class="btn slider-nav-btn slider-nav-btn--next js-gallery-slider__next-btn"><i
+                            class="fas fa-arrow-right"></i></button>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/headerSticky.js"></script>
+
     <script src="./js/university-slider.js"></script>
     <script src="./js/courses-slider.js"></script>
+    <script src="./js/gallery-slider.js"></script>
 
 </body>
 
