--- a/index.html
+++ b/index.html
@@ -434,17 +434,16 @@
     <section class="academic-header">
         <div class="container">
             <div class="academic-header__content">
-
-
                 <img class="academic-header__icon" src="./img/icons/graduation-icon.svg" alt="graduation">
                 <h1 class="academic-header__title">admissionS</h1>
                 <div class="academic">
-                    <!-- change academic-years there -->
+                    <!-- поменять год -->
                     <span class="academic__years">2020-2021</span>
+                    <!---->
+
                     <h5 class="academic__title">
                         are open!
                     </h5>
-                    <!---->
                 </div>
                 <div class="banner">
                     apply
@@ -546,6 +545,93 @@
         </div>
     </section>
 
+    <section class="feedback">
+        <div class="container">
+            <div class="title-block">
+                <h3 class="title-block__header">
+                    OUR STUDENTS’ FEEDBACK
+                </h3>
+                <div class="line">
+                    <span class="line-circle"></span>
+                </div>
+            </div>
+
+            <div class="feedback-slider">
+                <div class="quotes">
+                    <img src="./img/icons/“.svg" alt="''">
+                </div>
+                <div class="feedback-item">
+                    <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
+                    <div class="feedback-item__info">
+                        <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                        <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                        <p class="feedback-item__texr">I would like to thank Edugain Overseas representatives so much,
+                            especially Ms. Ekateryna, who has been there for me during the whole application period. I
+                            received the Invitation Letter and the study visa last summer, and I am currently on my
+                            second year studying International Law at Chechen State University. Local people and other
+                            students are nice and friendly, the cuisine is delicious, and there are actually many places
+                            to visit in Grozny! Thank you once again!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="upBtn">
+        <img src="img/icons/arrow_up.svg" alt="up">
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="telephones">
+                <div class="telephones__inner">
+                    <a href="tel:+380637909294">+38 (063) 790-92-94</a>
+                    <!-- <a href="tel:+79092077688">+7 (909) 207-76-88</a> -->
+                </div>
+            </div>
+
+            <h3 class="form-title">Or fill in the form</h3>
+            <form action="" class="footer-form">
+                <input type="text" placeholder="First Name" class="footer-form__imput">
+                <input type="text" placeholder="country" class="footer-form__imput">
+                <input type="text" placeholder="Phone Number" class="footer-form__imput">
+                <input type="email" placeholder="Email Adress" class="footer-form__imput">
+                <input type="submit" placeholder="Request INFO">
+            </form>
+
+            <div class="footer-items">
+                <div class="footer-item">
+                    <img src="./img/icons/logo.svg" alt="edugain overseas">
+                    <p class="footer-item__text">
+                        Edugain Overseas has been providing high-quality service to all students interested in education
+                        in Russian and Ukrainian universities since 2005, make sure to contact us today to make your
+                        dreams come true!
+                    </p>
+                </div>
+                <div class="footer-item">
+                    <h3 class="footer-item__title">Quick Navigation</h3>
+                    <h4 class="footer-item__subtitle">Courses</h4>
+                    <h4 class="footer-item__subtitle">Universities</h4>
+                    <h4 class="footer-item__subtitle">Admission process</h4>
+                    <h4 class="footer-item__subtitle">How to obtain visa</h4>
+                    <h4 class="footer-item__subtitle">Apply online</h4>
+                </div>
+                <div class="footer-item">
+                    <h3 class="footer-item__title">Contact us</h3>
+                    <h4 class="footer-item__subtitle">For Admissions:</h4>
+                    <a href="" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
+                    </a>
+                    <a href="" class="footer-item__link"> WhatsApp: +7 909 207 76 88
+                    </a>
+                    <a href="" class="footer-item__link"> Email: admissions@edugainoverseas.com
+                    </a>
+                    <h4 class="footer-item__subtitle">For Cooperation:</h4>
+
+
+
+                </div>
+            </div>
+        </div>
+        <div class="copiright">© Prime Network Copyright. All Rights Reserved.</div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
