--- a/index.html
+++ b/index.html
@@ -388,64 +388,78 @@
         <div class="container">
             <div class="admission-block-wrap">
                 <div class="admission-item-wrap">
-                    <div class="title-block">
-                        <h3 class="title-block__header">
-                            ADMISSION PROCESS
-                        </h3>
-                        <div class="line">
-                            <span class="line-circle"></span>
-                        </div>
-                    </div>
                     <div class="admission-item">
-                        <div class="step-block">
-                            <img src="./img/icons/step-1.svg" alt="step-1" class="step-block__icon">
-                            <h4 class="step-block__header">STEP: 1</h4>
-                            <h5 class="step-block__subtitle">Genera Medicine</h5>
-                            <span class="step-block__line"></span>
-                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
-                                out
-                                an online form to apply</p>
+                        <div class="title-block">
+                            <h3 class="title-block__header">
+                                ADMISSION PROCESS
+                            </h3>
+                            <div class="line">
+                                <span class="line-circle"></span>
+                            </div>
                         </div>
-                        <div class="step-block">
-                            <img src="./img/icons/step-2.svg" alt="step-1" class="step-block__icon">
-                            <h4 class="step-block__header">STEP: 1</h4>
-                            <h5 class="step-block__subtitle">Genera Medicine</h5>
-                            <span class="step-block__line"></span>
-                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
-                                out
-                                an online form to apply</p>
-                        </div>
-                        <div class=" step-block">
-                            <img src="./img/icons/step-3.svg" alt="step-1" class="step-block__icon">
-                            <h4 class="step-block__header">STEP: 1</h4>
-                            <h5 class="step-block__subtitle">Genera Medicine</h5>
-                            <span class="step-block__line"></span>
-                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
-                                out
-                                an online form to apply</p>
-                        </div>
-                        <div class=" step-block">
-                            <img src="./img/icons/step-4.svg" alt="step-1" class="step-block__icon">
-                            <h4 class="step-block__header">STEP: 1</h4>
-                            <h5 class="step-block__subtitle">Genera Medicine</h5>
-                            <span class="step-block__line"></span>
-                            <p class="step-block__info">Fill out an online form to apply for a Russian university Fill
-                                out
-                                an online form to apply</p>
+                        <div class="steps-wrap">
+                            <div class="step-block">
+                                <img src="./img/icons/step-1.svg" alt="step-1" class="step-block__icon">
+
+                                <h4 class="step-block__header">STEP: 1 <div class="tringle-decorate"></div>
+                                </h4>
+                                <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                <hr class="step-block__line">
+                                </hr>
+                                <p class="step-block__info">Fill out an online form to apply for a Russian university
+                                    Fill
+                                    out
+                                    an online form to apply</p>
+                            </div>
+                            <div class="step-block">
+                                <img src="./img/icons/step-2.svg" alt="step-1" class="step-block__icon">
+                                <h4 class="step-block__header">STEP: 2<div class="tringle-decorate"></div>
+                                </h4>
+                                <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                <hr class="step-block__line">
+                                </hr>
+                                <p class="step-block__info">Fill out an online form to apply for a Russian university
+                                    Fill
+                                    out
+                                    an online form to apply</p>
+                            </div>
+                            <div class="step-block">
+                                <img src="./img/icons/step-3.svg" alt="step-1" class="step-block__icon">
+                                <h4 class="step-block__header">STEP: 3<div class="tringle-decorate"></div>
+                                </h4>
+                                <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                <hr class="step-block__line">
+                                </hr>
+                                <p class="step-block__info">Fill out an online form to apply for a Russian university
+                                    Fill
+                                    out
+                                    an online form to apply</p>
+                            </div>
+                            <div class="step-block">
+                                <img src="./img/icons/step-4.svg" alt="step-1" class="step-block__icon">
+                                <h4 class="step-block__header">STEP: 4<div class="tringle-decorate"></div>
+                                </h4>
+                                <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                <hr class="step-block__line">
+                                </hr>
+                                <p class="step-block__info">Fill out an online form to apply for a Russian university
+                                    Fill
+                                    out
+                                    an online form to apply</p>
+                            </div>
                         </div>
                     </div>
+                    <form action="#" class="admission-form admission-form--in-block">
+                        <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                        <p class="admission-form__subtitle">Fill out an online form to apply for a Russian </p>
+                        <input type="text" placeholder="Name" class="admission-form__input">
+                        <input type="email" placeholder="Email" class="admission-form__input">
+                        <input type="tel" placeholder="Phone" class="admission-form__input">
+                        <input type="text" placeholder="Country" class="admission-form__input">
+                        <input type="submit" class="btn" placeholder="send">
+                    </form>
                 </div>
-                <form action="#" class="admission-form">
-                    <h3 class="admission-form__header">COMPLETE THE FORM</h3>
-                    <p class="admission-form__subtitle">Fill out an online form to apply for a Russian </p>
-                    <input type="text" placeholder="Name" class="admission-form__input">
-                    <input type="email" placeholder="Email" class="admission-form__input">
-                    <input type="tel" placeholder="Phone" class="admission-form__input">
-                    <input type="text" placeholder="Country" class="admission-form__input">
-                    <input type="submit" class="btn" placeholder="send">
-                </form>
             </div>
-        </div>
     </section>
     <section class="courses">
         <div class="title-block">
