change clider logic

--- a/index.html
+++ b/index.html
@@ -40,91 +40,101 @@
         </div>
     </header>
     <section class="header-slider">
-        <div class="square-decorate"></div>
-        <div class="container">
-            <div class="header-slider__content">
-                <div class="connection-info">
-                    <div class="connection-info__item">
-                        <div class="navigation-item navigation-item--phones">
-                            <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
-                            <div class="navigation-item__inner">
-                                <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
-                                <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+        <div class="header-slider-wrap">
+            <img src="./img/photo/slider business.png" alt="">
+            <img src="./img/photo/slider business.png" alt="">
+            <img src="./img/photo/slider business.png" alt="">
+            <img src="./img/photo/slider business.png" alt="">
+
+        </div>
+        <div class="header-slider-absolute">
+            <div class="square-decorate"></div>
+            <div class="container">
+                <div class="header-slider__content">
+                    <div class="connection-info">
+                        <div class="connection-info__item">
+                            <div class="navigation-item navigation-item--phones">
+                                <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
+                                <div class="navigation-item__inner">
+                                    <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
+                                    <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                                </div>
+                            </div>
+                            <div class="navigation-item navigation-item--email">
+                                <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
+                                <a class="navigation-item__link"
+                                    href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
                             </div>
                         </div>
-                        <div class="navigation-item navigation-item--email">
-                            <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
-                            <a class="navigation-item__link"
-                                href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
+                        <div class="connection-info__item">
+                            <div class="search">
+                                <input type="text" placeholder="serch..." class="search__input">
+                                <button class="search__btn"><img src="./img/icons/icon_search.svg"
+                                        alt="search"></button>
+                            </div>
+                            <a href="" class="btn connection-info__btn">Apply online</a>
                         </div>
+
+
                     </div>
-                    <div class="connection-info__item">
-                        <div class="search">
-                            <input type="text" placeholder="serch..." class="search__input">
-                            <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
+
+                    <div class="header-slider__block">
+                        <h1 class="header-slider__mail-title">Business</h1>
+                        <div class="subtitle-wrap">
+                            <img src="./img/photo/dots.svg" alt="" class="dots-img">
+                            <h2 class="header-slider__subtitle">Edugain in Ukranian
+                                <span class="header-subtitle-decorate">and Russian</span> </h2>
                         </div>
-                        <a href="" class="btn connection-info__btn">Apply online</a>
+
+                        <p class="header-slider__info">
+                            The best thing about studying MBBS in Russia that there is no entrance test for admission in
+                            Russian
+                            medical colleges/universities. The degrees have been validated by WHO and UNESCO
+                        </p>
+                        <a href="#" class="btn btn--header-slider">Deeeee nkjn</a>
                     </div>
+                    <nav class="header-slider__nav">
+                        <ul class="header-slider__nav-list">
+                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">01</span></li>
+                            <li class="header-slider__nav-item header-slider__nav-item--active"><span
+                                    class="header-slider__nav-num">02</span></li>
+                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">03</span></li>
+                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">04</span></li>
+                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
+                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">06</span></li>
+                        </ul>
 
+                        <div class="header-slider__buttons">
+                            <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
+                                    alt=""></button>
+                            <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
+                                    alt=""></button>
 
+                        </div>
+                    </nav>
+                    <nav class="social-nav">
+                        <ul class="social-nav__list">
+                            <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/envelope.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/whatsUp.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/vider.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/telegram.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/instagram.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/linked-in.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/facebook.svg" alt=""></a></li>
+                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                        src="./img/icons/youtube.svg" alt=""></a></li>
+
+                        </ul>
+                    </nav>
                 </div>
-
-                <div class="header-slider__block">
-                    <h1 class="header-slider__mail-title">Business</h1>
-                    <div class="subtitle-wrap">
-                        <img src="./img/photo/dots.svg" alt="" class="dots-img">
-                        <h2 class="header-slider__subtitle">Edugain in Ukranian
-                            <span class="header-subtitle-decorate">and Russian</span> </h2>
-                    </div>
-
-                    <p class="header-slider__info">
-                        The best thing about studying MBBS in Russia that there is no entrance test for admission in
-                        Russian
-                        medical colleges/universities. The degrees have been validated by WHO and UNESCO
-                    </p>
-                    <a href="#" class="btn btn--header-slider">Deeeee nkjn</a>
-                </div>
-                <nav class="header-slider__nav">
-                    <ul class="header-slider__nav-list">
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">01</span></li>
-                        <li class="header-slider__nav-item header-slider__nav-item--active"><span
-                                class="header-slider__nav-num">02</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">03</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">04</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">06</span></li>
-                    </ul>
-
-                    <div class="header-slider__buttons">
-                        <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
-                                alt=""></button>
-                        <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
-                                alt=""></button>
-
-                    </div>
-                </nav>
-                <nav class="social-nav">
-                    <ul class="social-nav__list">
-                        <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/envelope.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/whatsUp.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/vider.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/telegram.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/instagram.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/linked-in.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/facebook.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/youtube.svg" alt=""></a></li>
-
-                    </ul>
-                </nav>
             </div>
         </div>
     </section>
@@ -878,6 +888,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/headerSticky.js"></script>
 
+    <script src="./js/header-slide.js"></script>
     <script src="./js/header-assintend-slider.js"></script>
     <script src="./js/university-slider.js"></script>
     <script src="./js/courses-slider.js"></script>
